# bsm

./: Cargo.toml  README.md  completions.bash
.github/workflows/: ci.yml  release.yml
src/: bzfplayers.rs  color.rs  main.rs
