[package]
name = "bsm"
version = "0.2.0"
authors = ["The Noah <thenoahbz@gmail.com>"]
edition = "2018"
description = "BZFlag server manager"
categories = ["command-line-utilities"]
readme = "README.md"
homepage = "https://github.com/BZFlagCommunity/bsm"
repository = "https://github.com/BZFlagCommunity/bsm"
license-file = "LICENSE"
include = [
  "**/*.rs",
  "Cargo.{toml,lock}",
  "LICENSE",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

[dependencies]
chrono = "0.4.19"
